--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -52,7 +52,7 @@ const { title } = Astro.props;
   }
 
   main {
-    max-width: 70ch;
+    max-width: 100%;
     margin: 0 auto;
     padding: 6rem 2rem 4rem;
   }
