--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -56,7 +56,14 @@ const { title } = Astro.props;
     margin: 0 auto;
     padding: 6rem 2rem 4rem;
   }
-
+  .prose,[prose=""] {
+      color: var(--un-prose-body);
+      max-width: 95% !important;
+  }
+  code, kbd, samp, pre {
+      font-family: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace;
+      font-size: 1em !important;
+  }
   ::-webkit-scrollbar {
     width: 6px;
     height: 6px;
